clusters/home-cluster/apps/nextcloud/nextcloud-externalservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-external
  namespace: default
spec:
  type: ExternalName
  externalName: sacarino.carles.cc
