clusters/home-cluster/apps/nextcloud/nextcloud-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-route
  namespace: default
spec:
  parentRefs:
  - name: bacterio-gw
  hostnames:
  - "cloud.carles.cc"
  rules:
  - backendRefs:
    - name: nextcloud-external
      port: 80
